test/deca/context/valid/3_40_affectation_cast_intfloat_OBJET.deca
// Description:
//   cast d'un int en float 
// 
// Résultat : 
// cast un float en int

{
    float t2 = 12.5;
    int t1;
    t1 = (float)(t2);
}